# F-Agent

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  GOAL.md  README.md  config.yaml.example  main.py  pyproject.toml  requirements.txt  reset_db.py  start.ps1  start.sh
agent/: README.md  budget.py  loop.py  prompt.py
cli/: README.md  interface.py
config/: README.md  settings.py
context/: README.md  compressor.py
cron/: README.md  __init__.py  models.py  parser.py  runner.py  scheduler.py  store.py
db/: README.md  schema.py  session.py
docs/: ARCHITECTURE.md  GOAL.md  dev-sop.md
docs/prompt-templates/: explore.md  implement.md  plan.md  review.md
docs/superpowers/plans/: 2026-05-13-dev-sop-plan.md  (+11 more)
llm/: README.md  client.py
memory/: README.md  context_fence.py  manager.py  user_profile.py
skill/: README.md  loader.py  skill_utils.py
skills/: README.md  loader.py  skill_utils.py
tests/: README.md  test_agent_full.py  test_agent_loop.py  test_approval.py  test_cli_commands.py  test_compressor.py  test_config_settings.py  test_context_fence.py  test_cron_parser.py  test_cron_runner.py  test_cron_scheduler.py  test_cron_store.py  test_cron_tool.py  test_llm_client.py  test_logging_config.py  test_memory_manager.py  test_memory_tool.py  test_session.py  test_skill_hub.py  test_skill_loader.py  test_skill_tools.py  test_skill_utils.py  test_tools.py  test_user_profile.py
tools/: README.md  __init__.py  approval.py  cron.py  file_ops.py  memory.py  mysql.py  registry.py  skill.py  skill_hub.py  terminal.py  think.py  web_search.py
(+6 files in other folders)
