[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "f-agent"
version = "0.1.0"
description = "可运行、可扩展、可进化的个人智能助手"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "prompt_toolkit>=3.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "pymysql>=1.1.0",
    "croniter>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
fagent = "main:main"
